# sun_wsg50_ros

./: Dockerfile.ros2  README.md  https.rosinstall  ssh.rosinstall
sun_wsg50_common/: CMakeLists.txt  package.xml
sun_wsg50_control/: CMakeLists.txt  package.xml
sun_wsg50_control/launch/: wsg50_control.launch
sun_wsg50_control/src/: force_control_node.cpp  force_control_node_PI.cpp  force_reference_filt_node.cpp  position_control_lode.cpp  status_monitoring_node.cpp
sun_wsg50_driver/: CMakeLists.txt  package.xml
sun_wsg50_driver/launch/: wsg50_tcp_script.launch
sun_wsg50_simulation/: .setup_assistant  CMakeLists.txt  package.xml
sun_wsg50_simulation/config/: fake_controllers.yaml  gripper.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
sun_wsg50_simulation/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  display_gripper.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sun_wsg50_simulation/meshes/collision/: GUIDE_WSG50_110.stl  WSG50_110.stl
sun_wsg50_simulation/rviz/: display_gripper.rviz
sun_wsg50_simulation/src/: grasp_force_visualizer_node.cpp
sun_wsg50_simulation/urdf/: finger_flange.xacro  gripper_wsg50.urdf.xacro  gripper_wsg50.xacro  wsg50.urdf.xacro  wsg50.xacro
(+8 files in other folders)
